--- a/Nb/CSS/MyPrivateAccount.css
+++ b/Nb/CSS/MyPrivateAccount.css
@@ -91,7 +91,9 @@ ul li {
     height:18px;
 }
 .badge{
-    width: 20px; height: 17px;
+    width: 15px; height: 15px;
+    font-size: 10px;
+    left: 20px;
 }
 #oveviewLeft{
     background-color: #f2f4f7;
@@ -328,12 +330,16 @@ td{
     }
 }
 
-.toptext {
+.act {
     color: #568cf9;
     font-weight: 500;
     border-bottom: 2px solid #568cf9;
 }
-
+.toptext:hover {
+    color: #568cf9;
+    font-weight: 500;
+    border-bottom: 2px solid #568cf9;
+}
 .sider{
     color: gray;
 }
@@ -341,9 +347,9 @@ td{
     color: #568cf9;
 }
  
-@media screen and (max-width:768px){
+@media screen{
     .inputbar{
-        width: 90%;
+        width: 95%;
         height: 40px;
         border-radius: 5px;
         background-color: white;
